Tue Mar 14 16:54:41 1995    <tytso@rsx-11.mit.edu>

	* Makefile.in: Delete definitions defined in pre/config.in.

Thu Mar  2 12:28:37 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 11:56:31 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 01:54:56 1995  John Gilmore  (gnu at toad.com)

	* pop_init.c, pop_pass.c, pop_user.c, mh-6.8.patch:  Avoid
	<krb5/...> includes.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Fri Nov 18 01:15:58 1994  Mark Eichin  <eichin@cygnus.com>

	* configure.in: use KRB5_POSIX_LOCKS (from epeisach).

Fri Nov 18 00:20:24 1994  Mark Eichin  <eichin@cygnus.com>

	* pop_send.c (pop_send): Only update last_msg if executing a RETR.
	From John Brezak <brezak@apollo.hp.com>.

Wed Nov  2 21:09:38 1994  Theodore Y. Ts'o  (tytso@dcl)

	* popper.h: NULL should not be used as a character assignment
		value.  Use '\0' instead. 

Wed Oct 26 15:00:13 1994    (tytso@rsx-11)

	* Makefile.in (CFLAGS): Control -g/-O via $(CCOPTS)

Mon Oct  3 19:17:15 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Use $(srcdir) to find manual page for make install.

Thu Sep 29 22:52:35 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Relink executables if libraries change

Thu Sep 22 20:47:25 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Fix order of configure so that cc can be found.

Thu Aug 18 19:07:38 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* configure.in:
	* pop_xmit.c: Added #ifdef NEED_SYS_FCNTL_H around <sys/fcntl.h>

Wed Aug 10 12:46:12 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* pop_dropcopy.c (pop_dropcopy): Change L_XTND to SEEK_END.

Tue Aug  9 16:50:08 1994  Tom Yu  (tlyu@dragons-lair)

	* configure.in: check for dbm as well as ndbm

	* pop_init.c: kill static version string that depended on ANSI
	string splicing
